--- a/拉格朗日点/实验报告模板.md
+++ b/拉格朗日点/实验报告模板.md
@@ -12,10 +12,62 @@
 
 请简要描述您实现的算法和方法，特别是：
 - L1点位置方程的推导过程和物理意义
-- 牛顿法和弦截法的实现策略
-- 初值或初始区间的选择依据
+  推导过程
+在地球-月球系统中，L1拉格朗日点是位于地球和月球连线上的一个平衡点。当一个卫星位于L1点时，它受到的地球引力、月球引力和离心力达到平衡，使得卫星能够相对于地球和月球保持静止。
 
-_在此处填写您的方法描述（约200-300字）_
+考虑一个质量为$m_s$的卫星，位于距离地心$r$处，距离月心$R-r$处（$R$为地月距离）。根据牛顿万有引力定律和圆周运动定律，卫星受到的力包括：
+地球引力：$F_{earth} = G\frac{M m_s}{r^2}$，方向指向地球
+月球引力：$F_{moon} = G\frac{m m_s}{(R-r)^2}$，方向指向月球
+离心力：$F_{centrifugal} = m_s \omega^2 r$，方向远离地球
+当卫星位于L1点时，这三个力的合力为零。由于地球引力和离心力方向相反，月球引力与地球引力方向相反，因此力平衡方程为：
+
+$$G\frac{M m_s}{r^2} - G\frac{m m_s}{(R-r)^2} = m_s \omega^2 r$$
+
+两边除以$m_s$，得到：
+
+$$G\frac{M}{r^2} - G\frac{m}{(R-r)^2} = \omega^2 r$$
+
+这就是L1点位置方程。
+物理意义
+这个方程描述了在地球和月球引力场中，一个物体能够保持相对于地球和月球静止的条件。左边第一项是地球引力加速度，第二项是月球引力加速度，右边是离心加速度。当这三个加速度达到平衡时，物体就可以稳定地位于L1点。
+
+- 牛顿法和弦截法的实现策略
+ 
+牛顿法是一种迭代算法，用于求解方程$f(x) = 0$的根。其基本思想是利用函数的导数（切线）来逼近根的位置。迭代公式为：
+
+$$x_{n+1} = x_n - \frac{f(x_n)}{f'(x_n)}$$
+
+实现步骤：
+1. 从初始猜测值$x_0$开始
+2. 计算当前点的函数值$f(x_n)$和导数值$f'(x_n)$
+3. 根据迭代公式计算下一个点$x_{n+1}$
+4. 检查收敛条件（相对误差小于容差）
+5. 如果未收敛，则继续迭代，直到达到最大迭代次数或满足收敛条件
+
+弦截法是牛顿法的一种变种，不需要计算导数，而是通过两个点的函数值来估计导数。迭代公式为：
+
+$$x_{n+1} = x_n - f(x_n) \frac{x_n - x_{n-1}}{f(x_n) - f(x_{n-1})}$$
+
+实现步骤：
+1. 从初始区间$[a, b]$开始
+2. 计算区间端点的函数值$f(a)$和$f(b)$
+3. 根据迭代公式计算下一个点$x_{n+1}$
+4. 更新区间端点，保留最新的两个点
+5. 检查收敛条件（相对误差小于容差）
+6. 如果未收敛，则继续迭代，直到达到最大迭代次数或满足收敛条件
+
+- 初值或初始区间的选择依据
+  对于牛顿法，我们选择初始值$r_0 = 3.5 \times 10^8$ m，约为地月距离的90%。选择依据如下：
+  
+  1.L1点位于地球和月球之间，且更靠近月球
+  2.通过绘制方程曲线（见`plot_lagrange_equation`函数），可以观察到方程在$3.0 \times 10^8$ m到$3.8 \times 10^8$ m之间有一个根
+  3.初始值选在根附近可以确保牛顿法快速收敛
+
+  对于弦截法，我们选择初始区间$[3.2 \times 10^8, 3.7 \times 10^8]$ m。选择依据如下：
+  
+  1.区间包含方程的根
+  2.区间端点处的函数值异号（虽然弦截法不要求这一点，但可以提高收敛可靠性）
+  3.区间大小适中，既不过大导致收敛缓慢，也不过小导致无法包含根
 
 ## 3. 实验结果
 
@@ -23,10 +75,16 @@ _在此处填写您的方法描述（约200-300字）_
 
 请在此处粘贴您生成的L1点位置方程图像，并简要说明图中的零点位置及其物理意义。
 
-_在此处插入方程图像_
+![屏幕截图 2025-05-21 102546](https://github.com/user-attachments/assets/5ed8a920-093c-498e-9139-3988349c9afa)
+
 
 图像说明：
-_在此处添加对图像的解释（约100字）_
+根据代码中的方程和图像分析，图中的零点位置对应地球-月球系统中L1拉格朗日点的位置。这个点位于地球和月球之间的连线上，约为 $3.26 \times 10^8$ 米（即326,000公里），约为地月距离的 84.8%
+物理位置位于地球和月球之间，更靠近月球（因为月球质量远小于地球，引力平衡点偏向月球一侧）。
+物理意义：
+
+这个零点代表卫星在该位置所受的合力为零，即地球引力、月球引力、离心力
+
 
 ### 3.2 数值求解结果
 
@@ -34,9 +92,9 @@ _在此处添加对图像的解释（约100字）_
 
 | 求解方法 | L1点位置 (m) | 相对于地月距离的比例 | 迭代次数 | 是否收敛 |
 |---------|------------|-------------------|---------|--------|
-| 牛顿法   |            |                   |         |        |
-| 弦截法   |            |                   |         |        |
-| fsolve  |            |                   | -       | -      |
+| 牛顿法   |        3.26e+08    |          0.8481         |     6    |     是   |
+| 弦截法   |        3.26e+08    |              0.8481     |     7    |     是   |
+| fsolve  |        3.26e+08    |          0.8481         | -       | -      |
 
 ### 3.3 不同方法的结果比较
 
@@ -44,9 +102,9 @@ _在此处添加对图像的解释（约100字）_
 
 | 比较项 | 绝对差异 (m) | 相对差异 (%) |
 |-------|------------|-------------|
-| 牛顿法 vs 弦截法 |  |  |
-| 牛顿法 vs fsolve |  |  |
-| 弦截法 vs fsolve |  |  |
+| 牛顿法 vs 弦截法 | 1.94e-02 | 0.00000001% |
+| 牛顿法 vs fsolve | 2.378e-05 | 0.00000000001% |
+| 弦截法 vs fsolve | 1.937e-02 | 0.00000001% |
 
 ## 4. 分析与讨论
 
