--- a/傅立叶滤波和平滑/实验报告模板.md
+++ b/傅立叶滤波和平滑/实验报告模板.md
@@ -18,6 +18,8 @@
 
 _在此处填写您的方法描述（约200-300字）_
 
+在本实验中，我首先通过 np.loadtxt 加载道琼斯工业平均指数数据文件 dow.txt，并进行了异常处理以确保数据读取的可靠性。接着，使用 numpy.fft.rfft 对时间序列数据进行傅立叶变换，将其从时间域转换为频域，得到频域系数。为了实现滤波，我设计了低通滤波器，通过保留前10%或前2%的傅立叶系数（即将后90%或98%的系数置零）来抑制高频成分。随后，使用 numpy.fft.irfft 进行逆变换，将滤波后的频域信号转换回时间域信号。最后，我利用 matplotlib 库绘制原始数据和滤波后数据的对比图，使用不同颜色区分曲线，并添加图例以便观察滤波效果。整个过程清晰展示了傅立叶变换和滤波在信号处理中的应用。
+
 ## 3. 实验结果
 
 ### 3.1 原始数据时间序列
@@ -25,9 +27,11 @@ _在此处填写您的方法描述（约200-300字）_
 请在此处粘贴您生成的道琼斯工业平均指数原始数据时间序列图，并说明您从图中观察到的特征。
 
 _在此处插入原始数据时间序列图像_
+![微信截图_20250521104718](https://github.com/user-attachments/assets/54c307df-8f7b-4acc-950a-473f322eccf7)
 
 图像说明：
 _在此处添加对图像的解释（约100字）_
+原始数据时间序列图展示了道琼斯工业平均指数从2006年下半年至2010年年终的每日收盘值。图中可见指数的整体趋势和短期波动，例如2008年金融危机期间的显著下跌，以及2009年的逐步回升。短期波动较多，反映了市场的不确定性和日常交易影响。
 
 ### 3.2 保留前10%系数的滤波结果
 
@@ -36,9 +40,11 @@ _在此处添加对图像的解释（约100字）_
 2. 被抑制的频率成分对信号的影响
 
 _在此处插入10%滤波结果图像_
+![微信截图_20250521104727](https://github.com/user-attachments/assets/fb0b8f2a-5283-4ba3-8271-f53a7f3c5a9c)
 
 图像说明：
 _在此处添加对图像的解释（约100字）_
+保留前10%傅立叶系数的滤波结果显示，滤波后的信号（红色线）相较于原始信号（蓝色线）更加平滑，高频成分被显著抑制。短期波动减少，信号主要保留了中长期趋势。被抑制的高频成分对应市场噪声和短期投机行为，而保留的低频成分反映了经济基本面和长期趋势。
 
 ### 3.3 保留前2%系数的滤波结果
 
@@ -47,9 +53,11 @@ _在此处添加对图像的解释（约100字）_
 2. 更严格滤波对信号的影响
 
 _在此处插入2%滤波结果图像_
+![微信截图_20250521104735](https://github.com/user-attachments/assets/6697015b-2ed4-4c60-8c52-a3ded643851e)
 
 图像说明：
 _在此处添加对图像的解释（约100字）_
+保留前2%傅立叶系数的滤波结果显示，信号进一步平滑，滤波后的信号（红色线）几乎只保留了非常低频的趋势变化。与10%滤波相比，2%滤波信号细节丢失更多，短期波动完全消失，主要反映长期经济周期。这种严格滤波使长期趋势更清晰，但牺牲了动态信息。
 
 ## 4. 分析与讨论
 
@@ -61,6 +69,7 @@ _在此处添加对图像的解释（约100字）_
 - 过度滤波可能导致的问题
 
 _在此处填写您的分析（约200字）_
+保留10%系数与保留2%系数的滤波结果差异显著。10%滤波保留了部分中频成分，信号仍能反映中期市场波动，平滑程度适中；而2%滤波仅保留最低频成分，信号极为平滑，仅呈现长期趋势。不同滤波强度对平滑程度影响明显，但过度滤波（如2%）可能导致重要短期和中期信息丢失。因此，需根据分析目标选择参数，平衡平滑与信息保留。
 
 ### 4.2 金融时间序列的频率特征
 
@@ -69,16 +78,19 @@ _在此处填写您的分析（约200字）_
 - 高频成分（短期波动）通常由什么因素引起？
 
 _在此处填写您的讨论（约200字）_
+在道琼斯指数中，低频成分（长期趋势）反映了宏观经济因素，如经济增长、通货膨胀和利率政策，以及公司长期盈利能力和市场信心。高频成分（短期波动）则由市场情绪、新闻事件和交易行为等短期因素驱动，如投资者情绪变化、突发事件或交易量波动。傅立叶滤波有助于分离这些成分，揭示市场行为的频率特性。
 
 ### 4.3 思考题
 
 1. 如果我们对道琼斯指数数据进行对数变换后再进行傅立叶分析，结果会有什么不同？
 
 _在此处填写您的回答（约100字）_
+对数变换可稳定方差，减小异方差性，使高值数据影响减少。傅立叶分析结果可能更接近正态分布，更好捕捉百分比变化而非绝对变化，从而增强频率特征的清晰度，尤其适用于金融数据的相对变化分析。
 
 2. 傅立叶变换假设信号是周期性的，但金融数据通常不是严格周期性的。这会导致什么问题？
 
 _在此处填写您的回答（约100字）_
+非周期性信号可能引发频谱泄漏，能量从真实频率扩散至相邻频率，导致频谱图伪影。解决方法包括使用窗函数（如汉宁窗）减小泄漏，或采用小波变换等更适合非周期信号的分析工具。
 
 ## 5. 结论
 
@@ -88,14 +100,32 @@ _在此处填写您的回答（约100字）_
 - 实验过程中遇到的挑战和解决方法
 
 _在此处填写您的结论（约150字）_
+本实验通过傅立叶滤波分析道琼斯指数，验证了其在金融数据分析中的价值。保留10%系数时，信号保留中期趋势，适合动态分析；保留2%系数时，仅反映长期趋势，适合宏观研究。滤波参数需依分析目标选择，避免过度滤波丢失信息。实验中解决了中文显示和测试失败问题，调整了 matplotlib 配置和代码结构。傅立叶滤波为理解市场行为提供了有力工具。
+
+核心代码片段
 
 ## 核心代码片段
 
 请粘贴您实现的关键函数代码（如滤波函数实现），并简要说明代码的核心思路。
 
 ```python
-# 在此处粘贴核心代码片段（不超过30行）
+def fourier_filter(data, keep_fraction=0.1):
+    """
+    执行傅立叶变换并滤波
+    """
+    if data is None:
+        print("错误：数据为空，无法执行傅立叶滤波！")
+        return None, None
+    
+    coeff = np.fft.rfft(data)
+    cutoff = int(len(coeff) * keep_fraction)
+    filtered_coeff = np.copy(coeff)
+    filtered_coeff[cutoff:] = 0
+    filtered_data = np.fft.irfft(filtered_coeff)
+    
+    return filtered_data, coeff
 ```
 
 代码说明：
 _在此处简要解释代码的实现思路（约100字）_
+该函数通过 np.fft.rfft 将数据变换至频域，计算保留系数数量（cutoff），将高频系数置零实现低通滤波，再用 np.fft.irfft 恢复时间域信号。代码简洁高效，体现了傅立叶滤波的核心思想。
