--- a/薛定谔方程/实验报告模板.md
+++ b/薛定谔方程/实验报告模板.md
@@ -16,7 +16,36 @@
 - 如何区分和处理偶宇称和奇宇称能级
 
 _在此处填写您的方法描述（约200-300字）_
-
+1. 数值计算问题的处理
+避免过小数值导致的计算误差
+使用物理常数的转换：代码中使用了约化普朗克常数（HBAR）和电子伏转换为焦耳的系数（EV_TO_JOULE），将能量单位从电子伏转换为焦耳，避免了在计算中直接使用过小的数值（如普朗克常数的原始值），从而减少了数值计算误差。
+处理数学函数的奇点和不连续点：
+在计算 y2 和 y3 时，代码使用了 np.errstate 上下文管理器，忽略除以零和无效操作的警告，避免因数学函数的奇点（如 tan 和 sqrt 的不连续点）导致程序中断。
+使用 np.where(np.isfinite(...), ..., np.nan) 将非有限值（如无穷大或NaN）替换为NaN，避免这些值对后续计算的影响。
+能量范围的选择：在绘制函数曲线时，能量范围 E_values 被设置为从 0.001 eV 到 19.999 eV，避免了能量为零或接近势阱高度时可能出现的数值问题。
+2. 二分法求解超越方程
+具体实现策略
+定义方程：
+代码中定义了一个函数 equation(E, parity)，用于计算给定能量 E 和宇称（parity）下的方程值。
+搜索区间：
+能量搜索区间为 [E_min, E_max]，默认情况下，E_min 为 0.001 eV，E_max 为势阱高度减去一个小值（0.001 eV），以确保不会超出势阱高度。
+二分法迭代：
+在 find_energy_level_bisection 函数中，使用二分法不断缩小搜索区间：
+初始化区间端点 a 和 b。
+计算区间中点 c，并计算方程在 c 处的值 fc。
+如果 fc 接近零（小于设定的精度 precision），则认为找到了能级。
+如果 fc 和 fa 的乘积小于零，说明方程在区间 [a, c] 内有根，更新区间为 [a, c]；否则，更新区间为 [c, b]。
+重复上述过程，直到区间长度小于设定的精度。
+返回结果：最终返回区间中点作为能级的能量值。
+3. 区分和处理偶宇称和奇宇称能级
+宇称的判断：
+在 find_energy_level_bisection 函数中，根据能级序号 n 的奇偶性判断宇称：
+如果 n % 2 == 0，则为偶宇称能级，parity = 'even'。
+如果 n % 2 == 1，则为奇宇称能级，parity = 'odd'。
+方程的选择：
+在 equation 函数中，根据宇称选择不同的方程形式。
+能级的计算：
+在主函数 main 中，通过循环调用 find_energy_level_bisection 函数，分别计算前 6 个能级（包括偶宇称和奇宇称能级），并打印结果。
 ## 3. 实验结果
 
 ### 3.1 能级方程可视化
