--- a/拉格朗日点/实验报告模板.md
+++ b/拉格朗日点/实验报告模板.md
@@ -112,28 +112,49 @@ $$x_{n+1} = x_n - f(x_n) \frac{x_n - x_{n-1}}{f(x_n) - f(x_{n-1})}$$
 
 请分析L1点的物理意义及其在空间任务中的应用价值：
 - L1点为什么能保持卫星相对于地球和月球静止？
+  L1点位于地球和月球之间的连线上，是一个引力平衡点。在此位置，卫星受到的地球引力、月球引力与离心力达到平衡，合力为零。数学上，这表现为方程 $G\frac{M}{r^2} - G\frac{m}{(R-r)^2} = \omega^2 r$ 的解。由于地球质量远大于月球，L1点更靠近月球（约为地月距离的84.8%）。这种平衡允许卫星无需消耗大量燃料即可保持相对静止，成为天然的“太空停泊站”。
 - 在L1点放置卫星有什么实际应用？
 
-_在此处填写您的分析（约200字）_
+1.稳定观测平台：卫星可持续监测地月系统，例如监测月球背面（避免地球遮挡）或太阳活动（如SOHO卫星在日地L1点）。
+
+2. 通信中继：作为地球与月球探测器的通信枢纽，减少信号延迟。
+   
+3. 深空探测中转站：航天器可在此进行燃料补给或轨道调整，降低任务成本。
 
 ### 4.2 数值方法的比较
 
 讨论牛顿法和弦截法在求解此问题时的优缺点：
 - 收敛速度比较
-- 对初值/初始区间的敏感性
-- 计算复杂度和实现难度
+  牛顿法，二次收敛，每步迭代误差大致平方减少，对该问题通常3-4次迭代即可收敛。
+  弦截法，超线性收敛（约1.618次幂），收敛速度稍慢，通常需要5-7次迭代。
 
-_在此处填写您的讨论（约200字）_
+- 对初值/初始区间的敏感性
+  牛顿法：依赖导数信息，初值需接近真实解（如代码中选择3.5e8m），否则可能发散。
+  弦截法：通过区间两点估计导数，对初值要求较低（如区间[3.2e8, 3.7e8]m），但需确保区间包含根。
+
+- 计算复杂度和实现难度
+  复杂度
+  牛顿法：每次迭代需计算函数值和导数值，计算量较大。
+  弦截法：每次迭代仅需计算函数值，但需保留两个历史点，内存需求略高。
+
+  实现难度
+  牛顿法：需显式计算导数（如代码中`lagrange_equation_derivative`），实现稍复杂。
+  弦截法：无需导数，直接通过函数值估计切线，实现更简单。
 
 ### 4.3 思考题
 
 1. 如果将地球质量M增加，L1点的位置将如何变化？请给出物理解释。
 
-_在此处填写您的回答（约100字）_
+若地球质量$M$增加，地球引力增强，L1点将向月球方向移动。
+物理解释：更大的地球引力需要卫星离地球更远（同时离月球更近），才能使月球引力和离心力的合力与地球引力平衡。数学上，方程的解$r$会增大，但由于分母为$R-r$，月球引力的影响范围会缩小，导致平衡点更靠近月球。
 
 2. 除了L1点外，地球-月球系统还有其他拉格朗日点（L2-L5）。这些点的位置如何确定？它们各自有什么特点？
+   L2点：位于地球外侧的地月连线上，是另一个引力平衡点，适合放置天文望远镜（如詹姆斯·韦伯空间望远镜），避免地球和月球的干扰。
+   
+   L3点：位于地球对侧的月球轨道上，受太阳引力摄动较大，稳定性较差，暂无实际应用。
+   
+   L4和L5点：位于月球轨道前方和后方60°处，形成等边三角形，是稳定平衡点，可能存在天然小行星或可用于放置长期观测站。确定这些点需考虑更复杂的引力矢量合成，通常通过数值方法求解非线性方程组。
 
-_在此处填写您的回答（约150字）_
 
 ## 5. 结论
 
@@ -146,8 +167,85 @@ _在此处填写您的结论（约150字）_
 请粘贴您实现的关键函数代码（如L1点位置方程和牛顿法实现），并简要说明代码的核心思路。
 
 ```python
-# 在此处粘贴核心代码片段（不超过30行）
+def lagrange_equation(r):
+    """
+    L1拉格朗日点位置方程
+
+    参数:
+        r (float): 从地心到L1点的距离 (m)
+
+    返回:
+        float: 方程左右两边的差值，当r是L1点位置时返回0
+    """
+    # 地球引力
+    f_earth = G * M / r ** 2
+    # 月球引力（注意方向）
+    f_moon = G * m / (R - r) ** 2
+    # 离心力
+    f_centrifugal = omega ** 2 * r
+
+    # 力平衡方程
+    equation_value = f_earth - f_moon - f_centrifugal
+    return equation_value
+
+
+def lagrange_equation_derivative(r):
+    """
+    L1拉格朗日点位置方程的导数，用于牛顿法
+
+    参数:
+        r (float): 从地心到L1点的距离 (m)
+
+    返回:
+        float: 方程对r的导数值
+    """
+    # 对方程 G*M/r^2 - G*m/(R-r)^2 = ω^2*r 求导
+    # 导数为 -2*G*M/r^3 - 2*G*m/(R-r)^3 - ω^2
+    derivative_value = -2 * G * M / r ** 3 - 2 * G * m / (R - r) ** 3 - omega ** 2
+    return derivative_value
+
+
+def newton_method(f, df, x0, tol=1e-8, max_iter=100):
+    """
+    使用牛顿法（切线法）求解方程f(x)=0
+
+    参数:
+        f (callable): 目标方程，形式为f(x)=0
+        df (callable): 目标方程的导数
+        x0 (float): 初始猜测值
+        tol (float): 收敛容差
+        max_iter (int): 最大迭代次数
+
+    返回:
+        tuple: (近似解, 迭代次数, 收敛标志)
+    """
+    x = x0
+    iterations = 0
+    converged = False
+
+    for i in range(max_iter):
+        fx = f(x)
+        dfx = df(x)
+
+        # 检查导数是否接近零
+        if abs(dfx) < 1e-12:
+            break
+
+        # 牛顿迭代公式
+        x_new = x - fx / dfx
+
+        # 检查收敛性
+        relative_error = abs((x_new - x) / x_new)
+        if relative_error < tol:
+            converged = True
+            iterations = i + 1
+            x = x_new
+            break
+
+        x = x_new
+
+    return x, iterations, converged
+
 ```
 
-代码说明：
-_在此处简要解释代码的实现思路（约100字）_
+
