--- a/拉格朗日点/实验报告模板.md
+++ b/拉格朗日点/实验报告模板.md
@@ -15,15 +15,15 @@
   推导过程
 在地球-月球系统中，L1拉格朗日点是位于地球和月球连线上的一个平衡点。当一个卫星位于L1点时，它受到的地球引力、月球引力和离心力达到平衡，使得卫星能够相对于地球和月球保持静止。
 
-考虑一个质量为$m_s$的卫星，位于距离地心$r$处，距离月心$R-r$处（$R$为地月距离）。根据牛顿万有引力定律和圆周运动定律，卫星受到的力包括：
-地球引力：$F_{earth} = G\frac{M m_s}{r^2}$，方向指向地球
-月球引力：$F_{moon} = G\frac{m m_s}{(R-r)^2}$，方向指向月球
-离心力：$F_{centrifugal} = m_s \omega^2 r$，方向远离地球
+考虑一个质量为 $m_s$ 的卫星，位于距离地心 $r$ 处，距离月心 $R-r$ 处（ $R$ 为地月距离）。根据牛顿万有引力定律和圆周运动定律，卫星受到的力包括：
+地球引力： $F_{earth} = G\frac{M m_s}{r^2}$ ，方向指向地球
+月球引力： $F_{moon} = G\frac{m m_s}{(R-r)^2}$ ，方向指向月球
+离心力： $F_{centrifugal} = m_s \omega^2 r$ ，方向远离地球
 当卫星位于L1点时，这三个力的合力为零。由于地球引力和离心力方向相反，月球引力与地球引力方向相反，因此力平衡方程为：
 
 $$G\frac{M m_s}{r^2} - G\frac{m m_s}{(R-r)^2} = m_s \omega^2 r$$
 
-两边除以$m_s$，得到：
+两边除以 $m_s$ ，得到：
 
 $$G\frac{M}{r^2} - G\frac{m}{(R-r)^2} = \omega^2 r$$
 
@@ -33,14 +33,14 @@ $$G\frac{M}{r^2} - G\frac{m}{(R-r)^2} = \omega^2 r$$
 
 - 牛顿法和弦截法的实现策略
  
-牛顿法是一种迭代算法，用于求解方程$f(x) = 0$的根。其基本思想是利用函数的导数（切线）来逼近根的位置。迭代公式为：
+牛顿法是一种迭代算法，用于求解方程 $f(x) = 0$ 的根。其基本思想是利用函数的导数（切线）来逼近根的位置。迭代公式为：
 
 $$x_{n+1} = x_n - \frac{f(x_n)}{f'(x_n)}$$
 
 实现步骤：
-1. 从初始猜测值$x_0$开始
-2. 计算当前点的函数值$f(x_n)$和导数值$f'(x_n)$
-3. 根据迭代公式计算下一个点$x_{n+1}$
+1. 从初始猜测值 $x_0$ 开始
+2. 计算当前点的函数值 $f(x_n)$ 和导数值 $f'(x_n)$ 
+3. 根据迭代公式计算下一个点 $x_{n+1}$ 
 4. 检查收敛条件（相对误差小于容差）
 5. 如果未收敛，则继续迭代，直到达到最大迭代次数或满足收敛条件
 
@@ -49,18 +49,18 @@ $$x_{n+1} = x_n - \frac{f(x_n)}{f'(x_n)}$$
 $$x_{n+1} = x_n - f(x_n) \frac{x_n - x_{n-1}}{f(x_n) - f(x_{n-1})}$$
 
 实现步骤：
-1. 从初始区间$[a, b]$开始
-2. 计算区间端点的函数值$f(a)$和$f(b)$
-3. 根据迭代公式计算下一个点$x_{n+1}$
+1. 从初始区间 $[a, b]$ 开始
+2. 计算区间端点的函数值 $f(a)$ 和 $f(b)$ 
+3. 根据迭代公式计算下一个点 $x_{n+1}$ 
 4. 更新区间端点，保留最新的两个点
 5. 检查收敛条件（相对误差小于容差）
 6. 如果未收敛，则继续迭代，直到达到最大迭代次数或满足收敛条件
 
 - 初值或初始区间的选择依据
-  对于牛顿法，我们选择初始值$r_0 = 3.5 \times 10^8$ m，约为地月距离的90%。选择依据如下：
+  对于牛顿法，我们选择初始值 $r_0 = 3.5 \times 10^8$  m，约为地月距离的90%。选择依据如下：
   
   1.L1点位于地球和月球之间，且更靠近月球
-  2.通过绘制方程曲线（见`plot_lagrange_equation`函数），可以观察到方程在$3.0 \times 10^8$ m到$3.8 \times 10^8$ m之间有一个根
+  2.通过绘制方程曲线（见`plot_lagrange_equation`函数），可以观察到方程在 $3.0 \times 10^8$ m到$3.8 \times 10^8$  m之间有一个根
   3.初始值选在根附近可以确保牛顿法快速收敛
 
   对于弦截法，我们选择初始区间$[3.2 \times 10^8, 3.7 \times 10^8]$ m。选择依据如下：
@@ -160,7 +160,12 @@ $$x_{n+1} = x_n - f(x_n) \frac{x_n - x_{n-1}}{f(x_n) - f(x_{n-1})}$$
 
 总结本实验的主要发现和收获，包括对拉格朗日点物理意义的理解以及数值方法在天体力学问题中的应用。
 
-_在此处填写您的结论（约150字）_
+拉格朗日点的物理意义，引力平衡点，L1 点是地球 - 月球系统中位于两体连线上的引力平衡点，在此处卫星所受地球引力、月球引力与离心力达到平衡（合力为零）。这使得卫星无需持续消耗燃料即可保持相对静止，成为理想的太空观测与通信平台。
+拉格朗日点方程是高次非线性方程，无法解析求解。数值方法（如牛顿法、弦截法）提供了高效的迭代求解框架，适用于此类复杂问题。
+
+实验收获：物理与数学的结合，通过推导拉格朗日点方程，深刻理解了引力与离心力平衡的物理原理，并掌握了将物理问题转化为数学模型的方法。
+算法设计与实现，对比牛顿法和弦截法的实现，体会到算法选择对计算效率和结果可靠性的影响，增强了数值计算的工程实践能力。
+工具链的应用，学会使用 SciPy 库进行方程求解，并通过 Matplotlib 可视化验证结果，掌握了现代科学计算的工具链。
 
 ## 核心代码片段
 
