--- a/拉格朗日点/实验报告模板.md
+++ b/拉格朗日点/实验报告模板.md
@@ -60,10 +60,10 @@ $$x_{n+1} = x_n - f(x_n) \frac{x_n - x_{n-1}}{f(x_n) - f(x_{n-1})}$$
   对于牛顿法，我们选择初始值 $r_0 = 3.5 \times 10^8$  m，约为地月距离的90%。选择依据如下：
   
   1.L1点位于地球和月球之间，且更靠近月球
-  2.通过绘制方程曲线（见`plot_lagrange_equation`函数），可以观察到方程在 $3.0 \times 10^8$ m到$3.8 \times 10^8$  m之间有一个根
+  2.通过绘制方程曲线（见`plot_lagrange_equation`函数），可以观察到方程在 $3.0 \times 10^8$  m到 $3.8 \times 10^8$  m之间有一个根
   3.初始值选在根附近可以确保牛顿法快速收敛
 
-  对于弦截法，我们选择初始区间$[3.2 \times 10^8, 3.7 \times 10^8]$ m。选择依据如下：
+  对于弦截法，我们选择初始区间 $[3.2 \times 10^8, 3.7 \times 10^8]$  m。选择依据如下：
   
   1.区间包含方程的根
   2.区间端点处的函数值异号（虽然弦截法不要求这一点，但可以提高收敛可靠性）
@@ -143,10 +143,10 @@ $$x_{n+1} = x_n - f(x_n) \frac{x_n - x_{n-1}}{f(x_n) - f(x_{n-1})}$$
 
 ### 4.3 思考题
 
-1. 如果将地球质量M增加，L1点的位置将如何变化？请给出物理解释。
+1. 如果将地球质量 $M$ 增加，L1点的位置将如何变化？请给出物理解释。
 
-若地球质量$M$增加，地球引力增强，L1点将向月球方向移动。
-物理解释：更大的地球引力需要卫星离地球更远（同时离月球更近），才能使月球引力和离心力的合力与地球引力平衡。数学上，方程的解$r$会增大，但由于分母为$R-r$，月球引力的影响范围会缩小，导致平衡点更靠近月球。
+若地球质量 $M$ 增加，地球引力增强，L1点将向月球方向移动。
+物理解释：更大的地球引力需要卫星离地球更远（同时离月球更近），才能使月球引力和离心力的合力与地球引力平衡。数学上，方程的解 $r$ 会增大，但由于分母为 $R-r$ ，月球引力的影响范围会缩小，导致平衡点更靠近月球。
 
 2. 除了L1点外，地球-月球系统还有其他拉格朗日点（L2-L5）。这些点的位置如何确定？它们各自有什么特点？
    L2点：位于地球外侧的地月连线上，是另一个引力平衡点，适合放置天文望远镜（如詹姆斯·韦伯空间望远镜），避免地球和月球的干扰。
