--- a/薛定谔方程/实验报告模板.md
+++ b/薛定谔方程/实验报告模板.md
@@ -53,20 +53,25 @@ _在此处填写您的方法描述（约200-300字）_
 请在此处粘贴您生成的能级方程图像，并简要说明图中各曲线的物理意义以及能级对应的交点位置。
 
 _在此处插入能级方程图像_
+![xuedinger](https://github.com/user-attachments/assets/eeb1d5ae-ab64-440d-9311-4cfc155bdea2)
 
 图像说明：
 _在此处添加对图像的解释（约100字）_
-
+蓝色实线（y1）:该函数描述了在势阱内部粒子的量子行为，该函数在能量E接近势阱高度V时迅速增加，反映了粒子在高能量下的行为。红色虚线（y2）：为偶宇称。该函数描述了势阱内部粒子的偶宇称态的能量分布。该函数在能量E接近零时迅速增加，反映了粒子在低能量下的行为。绿色点划线（y3）： 为奇宇称。该函数描述了势阱内部粒子的奇宇称态的能量分布。该函数在能量E接近势阱高度V时迅速减小，反映了粒子在高能量下的行为。
+偶宇称能级：
+对应于y1和y2的交点。这些交点通常出现在y1的下降段和y2的上升段
+奇宇称能级：
+对应于y1和y3的交点。这些交点通常出现在y1的上升段和y3的下降段
 ### 3.2 能级计算结果
 
 请列出您计算得到的前6个能级值，并与参考值进行比较：
 
 | 能级序号 | 计算值 (eV) | 参考值 (eV) | 相对误差 (%) |
 |---------|------------|------------|-------------|
-| 0       |            | 0.318      |             |
-| 1       |            | 1.270      |             |
-| 2       |            | 2.851      |             |
-| 3       |            | 5.050      |             |
+| 0       |       | 0.318      |             |
+| 1       |      | 1.270      |             |
+| 2       |        | 2.851      |             |
+| 3       |         | 5.050      |             |
 | 4       |            | 7.850      |             |
 | 5       |            | 11.215     |             |
 
