--- a/白炽灯的温度/实验报告模板.md
+++ b/白炽灯的温度/实验报告模板.md
@@ -11,31 +11,65 @@
 ## 3. 实验结果
 ### 3.1 效率与温度关系
 请在此处粘贴`plot_efficiency_vs_temperature()`函数生成的图表，并标注：
+![myplot](https://github.com/user-attachments/assets/4c970bd2-fdee-47dc-a297-0ec589526aba)
 - 最大效率点对应的温度和效率值
+![myplot1](https://github.com/user-attachments/assets/9cdd0116-4422-4ebb-b3d5-42e131872f2c)
 - 实际白炽灯工作温度(约2700K)对应的效率
 
 ### 3.2 最优温度计算结果
 | 参数 | 值 |
 |------|----|
-| 理论最优温度Topt | [填写你的计算结果] K |
-| 最大效率ηmax | [填写你的计算结果] % |
+| 理论最优温度Topt | [6270.6 ] K |
+| 最大效率ηmax | [14.42] % |
 | 实际工作温度 | 2700 K |
-| 实际效率 | [填写你的计算结果] % |
+| 实际效率 | [2.25] % |
 
 ## 4. 分析与讨论
 1. 为什么理论最优温度与实际工作温度存在差异？
    - 考虑钨丝熔点限制(3695K)
    - 高温下灯丝蒸发速率增加
    - 能耗与成本因素
+钨丝熔点限制：钨的熔点为3695 K，当温度接近或达到熔点时，钨丝将无法保持稳定，导致灯丝熔断。
+高温下的蒸发速率：在高温条件下，钨丝的蒸发速率显著加快，这会降低灯丝的使用寿命，增加维护成本，同时可能导致灯泡内部污染。
+能耗与成本因素：提高工作温度需要更多的能量输入，这将导致能耗增加，与提高效率的初衷相悖。此外，为了承受更高温度，可能需要采用更昂贵的材料和更复杂的制造工艺，从而增加生产成本。
 
 2. 提高白炽灯效率的可能途径：
    - 使用更高熔点的材料
    - 改进灯泡结构设计
    - 优化工作温度区间
+探索更高熔点的材料：寻找熔点高于钨且在高温下性能稳定的材料，以允许更高的工作温度。
+改进灯泡结构设计：通过优化灯泡的内部结构，例如增加反射层或采用特殊气体填充，来减少热量损失并提高光输出效率。
+优化工作温度区间：在保证灯丝稳定性和使用寿命的前提下，尽可能提高工作温度，以接近理论最优效率。
 
 ## 5. 核心代码片段
 请粘贴你认为最关键的函数实现代码
 
 ```python
-# 在此处粘贴核心代码片段（不超过30行）
+def calculate_visible_power_ratio(temperature):
+    """
+    计算给定温度下可见光功率与总辐射功率的比值
+    """
+    def intensity_function(wavelength):
+        return planck_law(wavelength, temperature)
+    
+    visible_power, _ = integrate.quad(intensity_function, VISIBLE_LIGHT_MIN, VISIBLE_LIGHT_MAX)
+    total_power, _ = integrate.quad(intensity_function, 1e-9, 10000e-9)
+    return visible_power / total_power
+
+
+def find_optimal_temperature():
+    """
+    寻找使白炽灯效率最大的最优温度
+    """
+    def objective(temperature):
+        return -calculate_visible_power_ratio(temperature)
+    
+    result = minimize_scalar(
+        objective,
+        bounds=(1000, 10000),
+        method='bounded',
+        options={'xatol': 1.0}
+    )
+    
+    return result.x, -result.fun
 ```
