--- a/薛定谔方程/实验报告模板.md
+++ b/薛定谔方程/实验报告模板.md
@@ -84,7 +84,8 @@ _在此处添加对图像的解释（约100字）_
 - 这种分布规律与经典物理有何不同？体现了量子力学的哪些特性？
 
 _在此处填写您的分析（约200字）_
-
+不均匀，间隔随能级增大而逐渐增大。
+经典物理中是连续的，且能确切知道粒子的位置和动量，体现了能量量子化，波粒二象性以及不确定性特性
 ### 4.2 计算方法的精度与效率
 
 讨论您使用的二分法在求解此类问题时的优缺点：
@@ -92,17 +93,19 @@ _在此处填写您的分析（约200字）_
 - 计算效率如何？是否有可能使用其他方法（如牛顿法）提高效率？
 
 _在此处填写您的讨论（约200字）_
-
+精度较高，通过不断缩小搜索区间确保精度，足以满足物理问题的需求。
+计算效率低，缺点在于由设定阈值决定，当阈值过大时迭代次数过多，十分耗时，可以使用其他方法提高效率如牛顿法利用导数快速收敛。
 ### 4.3 思考题
 
 1. 如果增加势阱宽度 $w$，能级将如何变化？请给出物理解释。
 
 _在此处填写您的回答（约100字）_
+增加宽度，能级间隔将减小，因为更宽的势阱允许粒子有更多空间运动，使得能级更加接近，使量子化条件更加宽松。
 
 2. 如果将势阱高度 $V$ 改变，对能级分布有何影响？特别是，当 $V \to \infty$ 时，能级方程将如何简化？
 
 _在此处填写您的回答（约100字）_
-
+改变时分布会受到影响，高度增加能级间隔增加。当趋于正无穷时，能级方程将简化为无限深势阱情况，能级只取决于势阱宽度和粒子质量
 ## 5. 结论
 
 总结本实验的主要发现和收获，包括对量子力学基本概念的理解以及数值方法在物理问题中的应用。
