--- a/薛定谔方程/实验报告模板.md
+++ b/薛定谔方程/实验报告模板.md
@@ -121,6 +121,92 @@ _在此处填写您的结论（约150字）_
 ```python
 # 在此处粘贴核心代码片段（不超过30行）
 ```
+HBAR = 1.0545718e-34  # 约化普朗克常数 (J·s)
+ELECTRON_MASS = 9.1094e-31  # 电子质量 (kg)
+EV_TO_JOULE = 1.6021766208e-19  # 电子伏转换为焦耳的系数
+def calculate_y_values(E_values, V, w, m):
+    E_j = E_values * EV_TO_JOULE
+    V_j = V * EV_TO_JOULE
+    k = np.sqrt(w**2 * m * E_j/2)
+    y1 = np.tan(k / HBAR)
+    y2 = -1 / np.tan(k * w / 2)
+    with np.errstate(divide='ignore', invalid='ignore'):
+        y2 = np.sqrt((V_j - E_j) / E_j)
+        y3 = -np.sqrt(E_j / (V_j- E_j))
+    y1 = np.where(np.isfinite(y1), y1, np.nan)
+    y2 = np.where(np.isfinite(y2), y2, np.nan)
+    y3 = np.where(np.isfinite(y3), y3, np.nan)
+    return y1, y2, y3
+def plot_energy_functions(E_values, y1, y2, y3):
+    fig, ax = plt.subplots(figsize=(10, 6))
+    ax.plot(E_values, y1, label=r'$y_1 = \tan\sqrt{w^2mE/2\hbar^2}$', color='blue', linestyle='-')
+    ax.plot(E_values, y2, label=r'$y_2=\sqrt{\frac{V-E}{E}}$ (偶宇称)',color='red', linestyle='--')
+    ax.plot(E_values, y3, label=r'$y-3=-\sqrt{\frac{E}{V-E}}$ (奇宇称)', color='green', linestyle=':')
+    ax.set_xlim(0, 20)
+    ax.set_ylim(-10, 10)
+    ax.set_xlabel('Energy (eV)')
+    ax.set_ylabel('Function value')
+    ax.set_title('Finite Potential Well Transcendental Equations')
+    ax.axhline(0, color='black', linewidth=0.5)
+    ax.grid(True, linestyle='--', alpha=0.7)
+    ax.legend()
+    return fig
+def find_energy_level_bisection(n, V, w, m, precision=0.001, E_min=0.001, E_max=None):
+    if E_max is None:
+        E_max = V-0.001
+    def equation(E, parity):
+        k = np.sqrt(w**2* m * E * EV_TO_JOULE/2)
+        if parity == 'even':
+            return np.tan(k / HBAR) - np.sqrt((V - E) / E)
+        else:
+            return np.tan(k /HBAR) + 1/np.sqrt((V - E) / E)
+    parity = 'even' if n % 2 == 0 else 'odd'
+    a = E_min
+    b = E_max
+    while (b - a) > precision:
+        c = (a + b) / 2
+        fc = equation(c, parity)
+        fa = equation(a, parity)
+        if abs(fc) < 1e-10:
+            return c
+        if fc * fa < 0:
+            b = c
+        else:
+            a = c
+            fa=fc
+    return (a + b) / 2
+def main():
+    """
+    主函数，执行方势阱能级的计算和可视化
+    """
+    # 参数设置
+    V = 20.0  # 势阱高度 (eV)
+    w = 1e-9  # 势阱宽度 (m)
+    m = ELECTRON_MASS  # 粒子质量 (kg)
 
+    # 1. 计算并绘制函数曲线
+    E_values = np.linspace(0.001, 19.999, 1000)  # 能量范围 (eV)
+    y1, y2, y3 = calculate_y_values(E_values, V, w, m)
+    fig = plot_energy_functions(E_values, y1, y2, y3)
+    plt.savefig('energy_functions.png', dpi=300)
+    plt.show()
+
+    # 2. 使用二分法计算前6个能级
+    energy_levels = []
+    for n in range(6):
+        energy = find_energy_level_bisection(n, V, w, m)
+        energy_levels.append(energy)
+        print(f"能级 {n}: {energy:.3f} eV")
+
+    # 与参考值比较
+    reference_levels = [0.318, 1.270, 2.851, 5.050, 7.850, 11.215]
+    print("\n参考能级值:")
+    for n, ref in enumerate(reference_levels):
+        print(f"能级 {n}: {ref:.3f} eV")
+    print("\n相对误差:")
+    for n, (calc, ref) in enumerate(zip(energy_levels, reference_levels)):
+        rel_error = abs(calc - ref) / ref * 100
+        print(f"能级 {n}: {rel_error:.2f}%")
 代码说明：
 _在此处简要解释代码的实现思路（约100字）_
+先定义方程组计算，输入公式，同时注意数值问题，再定义绘图，依据方程算出每个点的值并绘制曲线。再进行二分法计算，算得数据，最后汇总到一起输出。
